fun facts section wrapped and fixed

--- a/style.css
+++ b/style.css
@@ -40,17 +40,21 @@
 
 #fun-facts-button{
     display: flex;
+    flex-wrap: wrap;
     border: none;
     margin: 0px;
     padding: 0px;
-    width: 10vw;
+    width: 20vw;
 }
 .fun-facts-button-border{
     display: flex;
     justify-content: center;
     border: none;
-    background-color: white;
 
+    background-color: white;
+}
+h4 {  
+    text-align: center;
 }
 .fun-facts{
     padding: 10px;
@@ -58,7 +62,7 @@
     margin-right: 25px;
     margin-bottom: 25px;
     border: 2px solid grey;
-    width: fit-content;
+    width: 50vw;
     height: fit-content;
     border-radius: 5px;
     -webkit-box-shadow: 10px 10px 27px 0px rgba(0,0,0,0.75);
